k8s/promenade-service/003-Service-sapoon-promenade.yaml
apiVersion: v1
kind: Service
metadata:
  name: sapoon-promenade
  labels:
    app: sapoon-promenade
    service: sapoon-promenade
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: sapoon-promenade
