k8s/promenade-service/004-Gateway-sapoon-promenade.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sapoon-promenade-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
