k8s/promenade-service/005-Virtualservice-sapoon-promenade.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sapoon-promenade
spec:
  hosts:
  - "*"
  gateways:
  - sapoon-promenade-gateway
  http:
  - match:
    - uri:
        prefix: /sapoon/promenade
    route:
    - destination:
        host: sapoon-promenade
        port:
          number: 8080
